tolk-tester/tests/invalid-declaration/err-1907.tolk

fun onBouncedMessage() {
}

/**
@compilation_should_fail
@stderr `onBouncedMessage` should have one parameter `InMessageBounced`
 */
